// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/lookup .lookupUpdates() disables major release separation (major) 1`] = `
Array [
  Object {
    "isPin": true,
    "newVersion": "0.4.4",
    "newVersionMajor": 0,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.4.4",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() disables major release separation (minor) 1`] = `
Array [
  Object {
    "fromVersion": "1.0.0",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() handles prerelease jumps 1`] = `
Array [
  Object {
    "fromVersion": "2.9.0-rc",
    "isRange": true,
    "newVersion": "^2.9.1-insiders.20180516",
    "newVersionMajor": 2,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/Microsoft/TypeScript",
    "toVersion": "2.9.1-insiders.20180516",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() ignores pinning for ranges when other upgrade exists 1`] = `
Array [
  Object {
    "isPin": true,
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.9.7",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() pins minor ranged versions 1`] = `
Array [
  Object {
    "isPin": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "type": "pin",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() rejects complex range in-range updates 1`] = `Array []`;

exports[`manager/npm/lookup .lookupUpdates() rejects in-range unsupported operator 1`] = `Array []`;

exports[`manager/npm/lookup .lookupUpdates() rejects non-fully specified in-range updates 1`] = `Array []`;

exports[`manager/npm/lookup .lookupUpdates() rejects reverse ordered less than greater than 1`] = `Array []`;

exports[`manager/npm/lookup .lookupUpdates() replaces major complex ranged versions if configured 1`] = `
Array [
  Object {
    "fromVersion": "2.7.0",
    "isRange": true,
    "newVersion": "^3.0.0",
    "newVersionMajor": 3,
    "newVersionMinor": 8,
    "repositoryUrl": "https://github.com/webpack/webpack",
    "toVersion": "3.8.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() replaces minor complex ranged versions if configured 1`] = `
Array [
  Object {
    "fromVersion": "1.3.0",
    "isRange": true,
    "newVersion": "~1.4.0",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() replaces non-range in-range updates 1`] = `
Array [
  Object {
    "fromVersion": "1.0.0",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns both updates if automerging minor 1`] = `
Array [
  Object {
    "isPin": true,
    "newVersion": "0.4.4",
    "newVersionMajor": 0,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.4.4",
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.4.4",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns minor update if automerging both patch and minor 1`] = `
Array [
  Object {
    "fromVersion": "0.9.0",
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.9.0",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns minor update if separate patches not configured 1`] = `
Array [
  Object {
    "fromVersion": "0.9.0",
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.9.0",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns only one update if automerging 1`] = `
Array [
  Object {
    "fromVersion": "0.4.0",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns only one update if automerging major 1`] = `
Array [
  Object {
    "isPin": true,
    "newVersion": "0.4.4",
    "newVersionMajor": 0,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.4.4",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns only one update if grouping 1`] = `
Array [
  Object {
    "isPin": true,
    "newVersion": "0.4.4",
    "newVersionMajor": 0,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.4.4",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns patch minor and major 1`] = `
Array [
  Object {
    "fromVersion": "0.8.0",
    "newVersion": "0.8.12",
    "newVersionMajor": 0,
    "newVersionMinor": 8,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.8.12",
    "type": "patch",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.8.0",
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.8.0",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns patch update if automerging patch 1`] = `
Array [
  Object {
    "fromVersion": "0.9.0",
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "patch",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.9.0",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns patch update if separateMinorPatch 1`] = `
Array [
  Object {
    "fromVersion": "0.9.0",
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "patch",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.9.0",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns rollback for pinned version 1`] = `
Array [
  Object {
    "branchName": "{{{branchPrefix}}}rollback-{{{depNameSanitized}}}-{{{newVersionMajor}}}.x",
    "commitMessageAction": "Roll back",
    "isRollback": true,
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "semanticCommitType": "fix",
    "type": "rollback",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.9.99",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() returns rollback for ranged version 1`] = `
Array [
  Object {
    "branchName": "{{{branchPrefix}}}rollback-{{{depNameSanitized}}}-{{{newVersionMajor}}}.x",
    "commitMessageAction": "Roll back",
    "isRollback": true,
    "newVersion": "^0.9.7",
    "newVersionMajor": 0,
    "semanticCommitType": "fix",
    "type": "rollback",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() should allow unstable versions if the current version is unstable 1`] = `
Array [
  Object {
    "fromVersion": "2.3.0-beta.1",
    "newVersion": "2.5.17-beta.0",
    "newVersionMajor": 2,
    "newVersionMinor": 5,
    "repositoryUrl": "https://github.com/vuejs/vue",
    "toVersion": "2.5.17-beta.0",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() should allow unstable versions if the ignoreUnstable=false 1`] = `
Array [
  Object {
    "fromVersion": "2.5.16",
    "newVersion": "2.5.17-beta.0",
    "newVersionMajor": 2,
    "newVersionMinor": 5,
    "repositoryUrl": "https://github.com/vuejs/vue",
    "toVersion": "2.5.17-beta.0",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() should downgrade from missing versions 1`] = `
Object {
  "branchName": "{{{branchPrefix}}}rollback-{{{depNameSanitized}}}-{{{newVersionMajor}}}.x",
  "commitMessageAction": "Roll back",
  "isRollback": true,
  "newVersion": "1.16.0",
  "newVersionMajor": 1,
  "semanticCommitType": "fix",
  "type": "rollback",
  "unpublishable": false,
}
`;

exports[`manager/npm/lookup .lookupUpdates() should treat zero zero caret ranges as pinned 1`] = `
Array [
  Object {
    "fromVersion": "0.0.34",
    "isRange": true,
    "newVersion": "^0.0.35",
    "newVersionMajor": 0,
    "newVersionMinor": 0,
    "repositoryUrl": null,
    "toVersion": "0.0.35",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports > latest versions if configured 1`] = `
Array [
  Object {
    "fromVersion": "1.4.1",
    "newVersion": "2.0.3",
    "newVersionMajor": 2,
    "newVersionMinor": 0,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "2.0.3",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports complex major hyphen ranges 1`] = `
Array [
  Object {
    "fromVersion": "2.7.0",
    "isRange": true,
    "newVersion": "1.x - 3.x",
    "newVersionMajor": 3,
    "newVersionMinor": 8,
    "repositoryUrl": "https://github.com/webpack/webpack",
    "toVersion": "3.8.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports complex major ranges 1`] = `
Array [
  Object {
    "fromVersion": "2.7.0",
    "isRange": true,
    "newVersion": "^1.0.0 || ^2.0.0 || ^3.0.0",
    "newVersionMajor": 3,
    "newVersionMinor": 8,
    "repositoryUrl": "https://github.com/webpack/webpack",
    "toVersion": "3.8.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports complex ranges 1`] = `
Object {
  "fromVersion": "0.8.12",
  "isRange": true,
  "newVersion": "^0.7.0 || ^0.8.0 || ^0.9.0",
  "newVersionMajor": 0,
  "newVersionMinor": 9,
  "repositoryUrl": "https://github.com/kriskowal/q",
  "toVersion": "0.9.7",
  "type": "minor",
  "unpublishable": false,
}
`;

exports[`manager/npm/lookup .lookupUpdates() supports complex tilde ranges 1`] = `
Array [
  Object {
    "fromVersion": "1.3.0",
    "isRange": true,
    "newVersion": "~1.2.0 || ~1.3.0 || ~1.4.0",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports in-range caret updates 1`] = `
Array [
  Object {
    "fromVersion": "1.0.0",
    "isRange": true,
    "newVersion": "^1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports in-range gte updates 1`] = `
Array [
  Object {
    "fromVersion": "1.0.0",
    "isRange": true,
    "newVersion": ">=1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports in-range tilde updates 1`] = `
Array [
  Object {
    "fromVersion": "1.0.0",
    "isRange": true,
    "newVersion": "~1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports minor and major upgrades for ranged versions 1`] = `
Array [
  Object {
    "isPin": true,
    "newVersion": "0.4.4",
    "newVersionMajor": 0,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.4.4",
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.4.4",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() supports minor and major upgrades for tilde ranges 1`] = `
Array [
  Object {
    "isPin": true,
    "newVersion": "0.4.4",
    "newVersionMajor": 0,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.4.4",
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.4.4",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades .x complex minor ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "1.3.0",
    "isRange": true,
    "newVersion": "1.2.x - 1.4.x",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades .x major ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "0.9.7",
    "isRange": true,
    "newVersion": "1.x",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades .x minor ranges 1`] = `
Array [
  Object {
    "isPin": true,
    "newVersion": "1.3.0",
    "newVersionMajor": 1,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "1.3.0",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades .x minor ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "1.3.0",
    "isRange": true,
    "newVersion": "1.4.x",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades less than equal major ranges 1`] = `
Array [
  Object {
    "fromVersion": "1.4.1",
    "isRange": true,
    "newVersion": "<= 2",
    "newVersionMajor": 2,
    "newVersionMinor": 0,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "2.0.3",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades less than equal minor ranges 1`] = `
Array [
  Object {
    "fromVersion": "1.3.0",
    "isRange": true,
    "newVersion": "<= 1.4",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades less than equal ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "0.7.2",
    "isRange": true,
    "newVersion": "<= 0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.7.2",
    "isRange": true,
    "newVersion": "<= 1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades less than major ranges 1`] = `
Array [
  Object {
    "fromVersion": "0.9.7",
    "isRange": true,
    "newVersion": "< 2",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades less than ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "0.7.1",
    "isRange": true,
    "newVersion": "< 0.9.8",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.7.1",
    "isRange": true,
    "newVersion": "< 1.4.2",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades major greater than less than ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "0.9.7",
    "isRange": true,
    "newVersion": ">= 0.5.0 < 2.0.0",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades major less than equal ranges 1`] = `
Array [
  Object {
    "fromVersion": "1.0.0",
    "isRange": true,
    "newVersion": "<= 1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades major less than ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "0.9.7",
    "isRange": true,
    "newVersion": "< 2.0.0",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades minor greater than less than equals ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "0.8.0",
    "isRange": true,
    "newVersion": ">= 0.5.0 <= 0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.8.0",
    "isRange": true,
    "newVersion": ">= 0.5.0 <= 1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades minor greater than less than ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "0.7.2",
    "isRange": true,
    "newVersion": ">= 0.5.0 <0.10",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.7.2",
    "isRange": true,
    "newVersion": ">= 0.5.0 <1.5",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades minor ranged versions 1`] = `
Array [
  Object {
    "isPin": true,
    "newVersion": "1.0.1",
    "newVersionMajor": 1,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "1.0.1",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades multiple caret ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "0.7.2",
    "isRange": true,
    "newVersion": "^0.9.0",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.7.2",
    "isRange": true,
    "newVersion": "^1.0.0",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades multiple tilde ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "0.7.2",
    "isRange": true,
    "newVersion": "~0.9.0",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "0.9.7",
    "type": "minor",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "0.7.2",
    "isRange": true,
    "newVersion": "~1.4.0",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades shorthand major ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "0.9.7",
    "isRange": true,
    "newVersion": "1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades shorthand minor ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "1.3.0",
    "isRange": true,
    "newVersion": "1.4",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades tilde ranges 1`] = `
Array [
  Object {
    "isPin": true,
    "newVersion": "1.3.0",
    "newVersionMajor": 1,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "1.3.0",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() upgrades tilde ranges without pinning 1`] = `
Array [
  Object {
    "fromVersion": "1.3.0",
    "isRange": true,
    "newVersion": "~1.4.0",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() uses the locked version for pinning 1`] = `
Array [
  Object {
    "isPin": true,
    "newVersion": "1.0.0",
    "newVersionMajor": 1,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "type": "pin",
    "unpublishable": false,
  },
  Object {
    "fromVersion": "1.0.0",
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() widens .x OR ranges 1`] = `
Array [
  Object {
    "fromVersion": "2.7.0",
    "isRange": true,
    "newVersion": "1.x || 2.x || 3.x",
    "newVersionMajor": 3,
    "newVersionMinor": 8,
    "repositoryUrl": "https://github.com/webpack/webpack",
    "toVersion": "3.8.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() widens major ranged versions if configured 1`] = `
Array [
  Object {
    "fromVersion": "2.7.0",
    "isRange": true,
    "newVersion": "^2.0.0 || ^3.0.0",
    "newVersionMajor": 3,
    "newVersionMinor": 8,
    "repositoryUrl": "https://github.com/webpack/webpack",
    "toVersion": "3.8.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() widens minor ranged versions if configured 1`] = `
Array [
  Object {
    "fromVersion": "1.3.0",
    "isRange": true,
    "newVersion": "~1.3.0 || ~1.4.0",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "repositoryUrl": "https://github.com/kriskowal/q",
    "toVersion": "1.4.1",
    "type": "minor",
    "unpublishable": false,
  },
]
`;

exports[`manager/npm/lookup .lookupUpdates() widens stanndalone major OR ranges 1`] = `
Array [
  Object {
    "fromVersion": "2.7.0",
    "isRange": true,
    "newVersion": "1 || 2 || 3",
    "newVersionMajor": 3,
    "newVersionMinor": 8,
    "repositoryUrl": "https://github.com/webpack/webpack",
    "toVersion": "3.8.1",
    "type": "major",
    "unpublishable": false,
  },
]
`;
